--- a/part01/index.html
+++ b/part01/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-
+        <!-- CSS Link -->
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./style-base-classes.css">
-
+        <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,5 +16,7 @@
     <h1 id="helloWorld">Hello World!</h1>
     <button id="helloConsoleBtn" onclick="consoleHello()">Click Me!</button>
 </body>
+
+    <!-- JS Link -->
 <script src="./index.js"></script>
 </html>
