--- a/part02/index.html
+++ b/part02/index.html
@@ -16,10 +16,11 @@
     <main>
         <form method="get" action="">
             <p>
-                Será que <input oninput="setA()" id="numberA" name="A" type="number" tabindex="1"> é maior que <input oninput="setB()" id="numberB" name="B" type="number" tabindex="2"> ?
+                Será que <input id="numberA" name="A" type="number" tabindex="1"> é maior que <input id="numberB" name="B" type="number" tabindex="2"> ?
+               
             </p>
         </form>
-        <button onclick="checkGreaterThan()" tabindex="3">VERIFICAR!</button>
+        <button id="submitButton" tabindex="3">VERIFICAR!</button>
         <h2 id="result"></h2>
     </main>
 
