Add comment on JS

--- a/part02/index.html
+++ b/part02/index.html
@@ -16,7 +16,7 @@
     <main>
         <form method="get" action="">
             <p>
-                Será que <input id="numberA" name="A" type="number" tabindex="1"> é maior que <input id="numberB" name="B" type="number" tabindex="2"> ?
+                Será que <input id="numberA" name="A" type="number" tabindex="1" placeholder="A"> é maior que <input id="numberB" name="B" type="number" tabindex="2" placeholder="B"> ?
                
             </p>
         </form>
