Rename files 'index' to 'number'

--- a/part02/number.html
+++ b/part02/number.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./number.css">
 
     <!-- Google Fonts Link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +24,6 @@
         <h2 id="result"></h2>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./number.js"></script>
 </body>
 </html>
