--- a/part02/string.html
+++ b/part02/string.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
             <!-- CSS Links -->
         <link rel="stylesheet" href="./assets/styles/style-base-classes.css">
         <link rel="stylesheet" href="./string.css">
