Add placeholders to birth date inputs

--- a/part02/death.html
+++ b/part02/death.html
@@ -29,15 +29,15 @@
             <div class="row justify-center gap-24">
                 <div class="column justify-center align-center">
                     <label class="birthLabel" for="birthDay">Day</label>
-                    <input id="birthDay" class="birthInput" type="number">
+                    <input id="birthDay" class="birthInput" type="number" placeholder="DD">
                 </div>
                 <div class="column justify-center align-center">
                     <label class="birthLabel" for="birthMonth">Month</label>
-                    <input id="birthMonth" class="birthInput" type="number">
+                    <input id="birthMonth" class="birthInput" type="number" placeholder="MM">
                 </div>
                 <div class="column justify-center align-center">
                     <label class="birthLabel" for="birthYear">Year</label>
-                    <input id="birthYear" class="birthInput" type="number">
+                    <input id="birthYear" class="birthInput" type="number" placeholder="YYYY">
                 </div>
             </div>
             <h3>Select your gender</h3>
