--- a/part04/imc.html
+++ b/part04/imc.html
@@ -21,11 +21,13 @@
     <body class="column justify-center align-center width-100">
         <div id="backgroundFade" class="column justify-center align-center width-100 gap-12">
             <h1>Calcule seu IMC</h1>
-            <label for="weight">Peso (Kg)</label>
-            <input id="weight" type="text" placeholder="0 Kg"/>
-            <label for="height">Altura (cm)</label>
-            <input id="height" type="text" placeholder="0 cm"/>
-            <input id="calcButton" type="button" value="Calcular IMC">
+            <form action="GET" class="column justify-center align-center width-100 gap-12">
+                <label for="weight">Peso (Kg)</label>
+                <input id="weight" type="text" placeholder="0 Kg" tabindex="1"/>
+                <label for="height">Altura (cm)</label>
+                <input id="height" type="text" placeholder="0 cm" tabindex="2"/>
+                <input id="calcButton" type="button" value="Calcular IMC" tabindex="3">
+            </form>
 
             <p id="result"></p>
         </div>
