--- a/part05/switch1.html
+++ b/part05/switch1.html
@@ -8,7 +8,7 @@
         
             <!-- CSS Link -->
         <link rel="stylesheet" href="./assets/styles/style-base-classes.css">
-        <link rel="stylesheet" href="./switch.css">
+        <link rel="stylesheet" href="./switch1.css">
 
             <!-- Google Fonts Link -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,6 +28,6 @@
             <p id="result">You shouldn't be able to read this!</p>
         </div>
 
-        <script src="./switch.js"></script>
+        <script src="./switch1.js"></script>
     </body>
 </html>
