--- a/part06/timer.html
+++ b/part06/timer.html
@@ -91,6 +91,7 @@
             <div class="column justify-center">
                 <label for="secondsInput">Seconds</label>
                 <select name="" id="secondsInput">
+                    <option value="0">0</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
