Add message pop sound / Adjust Samir's response after user's first message

--- a/part07/chat.html
+++ b/part07/chat.html
@@ -26,7 +26,7 @@
             <div>
                 <textarea id="chatDisplay" class="input" cols="30" rows="10" disabled></textarea>
             </div>
-            <div class="row gap-12">
+            <div id="inputDiv" class="row gap-12">
                 <input id="messageInput" class="input" type="text">
                 <button id="sendButton" class="input">Enviar</button>
                 <button id="clearButton" class="input">Limpar</button>
