--- a/part07/chat.html
+++ b/part07/chat.html
@@ -19,13 +19,16 @@
     </head>
     <body class="column align-center width-100">
         <div id="backgroundFade" class="column align-center gap-12">
+            <!-- Profile -->
             <div class="row align-center gap-24">
                 <img src="./assets/imgs/samir.jpg" alt="">
                 <h2>Samir Lutif</h2>
             </div>
+            <!-- Message History -->
             <div>
                 <textarea id="chatDisplay" class="input" cols="30" rows="10" disabled></textarea>
             </div>
+            <!-- Message Inputs -->
             <div id="inputDiv" class="row gap-12">
                 <input id="messageInput" class="input" type="text">
                 <button id="sendButton" class="input">Enviar</button>
