Create arithmeticless operation functions @ part09/template-string.html

--- a/part09/template-string.html
+++ b/part09/template-string.html
@@ -20,13 +20,17 @@
     <body>
         <div id="backgroundFade" class="column justify-center align-center">
             <div id="sumCard" class="column align-center gap-24">
-                <h1>Sum Numbers</h1>
+                <h1>Operate Numbers</h1>
                 <div class="row justify-center align-center gap-12">
                     <input type="text" id="num1" class="input" placeholder="A">
-                    <span>+</span>
+                    <span>and</span>
                     <input type="text" id="num2" class="input" placeholder="B">
                 </div>
-                <button id="sumButton" class="input">Sum!</button>
+                <button id="sumButton" class="input button">Sum!</button>
+                <button id="subtractButton" class="input button">Subtract!</button>
+                <button id="multiplyButton" class="input button">Multiply!</button>
+                <button id="divideButton" class="input button">Divide!</button>
+                <button id="powerButton" class="input button">Power!</button>
                 <p id="messageBox"></p>
             </div>
         </div>
