Fix lenght inputs check

--- a/part10/index.html
+++ b/part10/index.html
@@ -36,10 +36,10 @@
             <button id="listButton" class="input"  tabindex="5">List Products</button>
             <table>
                 <tr>
-                    <td>Product</td>
-                    <td>Price</td>
-                    <td>Edit</td>
-                    <td>Delete</td>
+                    <td class="nameColumn">Product</td>
+                    <td class="priceColumn">Price</td>
+                    <td class="editColumn">Edit</td>
+                    <td class="deleteColumn">Delete</td>
                 </tr>
             </table>
             <table id="productsList">
