Add sorting to table headers

--- a/part10/index.html
+++ b/part10/index.html
@@ -34,10 +34,11 @@
             </form>
             <p id="messageBox"></p>
             <button id="listButton" class="input"  tabindex="5">List Products</button>
+            <input id="searchInput" class="input" type="text" placeholder="🔍 Search">
             <table>
                 <tr>
-                    <td class="nameColumn">Product</td>
-                    <td class="priceColumn">Price</td>
+                    <td id="nameColumnHeader" class="nameColumn">Product</td>
+                    <td id="priceColumnHeader" class="priceColumn">Price</td>
                     <td class="editColumn">Edit</td>
                     <td class="deleteColumn">Delete</td>
                 </tr>
