--- a/part10/index.html
+++ b/part10/index.html
@@ -28,15 +28,15 @@
                 <div class="column gap-12">
                     <input id="productName" class="input" type="text" placeholder="Product Name" required tabindex="1">
                     <input id="productPrice" class="input" type="text" placeholder="Price" required tabindex="2">
-                    <button id="addButton" class="input" type="button" tabindex="4">Add Product</button>
+                    <button id="addButton" class="input button" type="button" tabindex="4">Add Product</button>
                 </div>
                 <textarea id="productDescription" class="input" cols="45" rows="10" placeholder="Description" required tabindex="3"></textarea>
             </form>
             <p id="messageBox"></p>
-            <button id="listButton" class="input"  tabindex="5">List Products</button>
+            <button id="listButton" class="input button"  tabindex="5">List Products</button>
             <input id="searchInput" class="input" type="text" placeholder="🔍 Search">
             <table>
-                <tr>
+                <tr class="button">
                     <td id="nameColumnHeader" class="nameColumn">Product</td>
                     <td id="priceColumnHeader" class="priceColumn">Price</td>
                     <td class="editColumn">Edit</td>
@@ -69,7 +69,7 @@
                     <input id="editProductName" class="input editInput" type="text" placeholder="Product Name" required">
                     <input id="editProductPrice" class="input editInput" type="text" placeholder="Price" required">
                     <textarea id="editProductDescription" class="input editInput" cols="45" rows="10" placeholder="Description" required></textarea>
-                    <button id="editButton" class="input editInput" type="button" tabindex="4">Edit Product</button>
+                    <button id="editButton" class="input editInput button" type="button" tabindex="4">Edit Product</button>
                     <p id="editMessageBox"></p>
                 </div>
                 
