--- a/part10/index.html
+++ b/part10/index.html
@@ -39,8 +39,8 @@
                 <tr class="button">
                     <td id="nameColumnHeader" class="nameColumn">Product</td>
                     <td id="priceColumnHeader" class="priceColumn">Price</td>
-                    <td class="editColumn">Edit</td>
-                    <td class="deleteColumn">Delete</td>
+                    <td class="editColumn"></td>
+                    <td class="deleteColumn"></td>
                 </tr>
             </table>
             <table id="productsList">
