--- a/part12/index.html
+++ b/part12/index.html
@@ -21,7 +21,7 @@
         <title>JS - Part 12</title>
     </head>
     <body>
-        <div id="backgroundFade" class="column justify-center align-center gap-48">
+        <div id="backgroundFade" class="column justify-center align-center gap-24">
             <div class="column justify-center align-center">
                 <h1>Factorial</h1>
                 <input type="number" id="factorialInput" placeholder="Calculate Factorial">
@@ -37,6 +37,16 @@
             <div class="column justify-center align-center">
                 <h1>Pi π</h1>
                 <button id="piButton">Calculate!</button>
+            </div>
+            <div class="column justify-center align-center gap-24">
+                <h1>Poker Game</h1>
+                <p id="pokerResult"></p>
+                <button id="pokerButton">Pick Cards!</button>
+                <table>
+                    <tbody id="pokerTable" class="column gap-12">
+
+                    </tbody>
+                </table>
             </div>
         </div>
         <script src="./index.js"></script>
