Add direct URL hash routing for first page load

--- a/part14/index.html
+++ b/part14/index.html
@@ -29,11 +29,10 @@
                 <span id="candyAnchor" class="anchor">Candies</span>
             </header>
             <main id="app">
-                <div id="candy" class="contentDiv">
-                    <figure><img src="./assets/imgs/candies.jpg" alt=""></figure>
-                    <h1>A Lot of Candies</h1>
-                    <h3>Dive into a olympic pool of sweetness!</h3>
-                    <p>Come discover a whole new world of flavours</p>
+                <div id="home" class="contentDiv">
+                    <figure class="logoWrapper"><img class="noShadow" src="../part14/assets/imgs/logo.png" alt=""></figure>
+                    <h1>Wendy's Candy</h1>
+                    <h3>World's best fictional candy store!</h3>
                 </div>
             </main>
         </div>
