Swap BTC for JPY

--- a/part15/index.html
+++ b/part15/index.html
@@ -30,7 +30,7 @@
                     <option value="USD">USD</option>
                     <option value="CAD">CAD</option>
                     <option value="EUR">EUR</option>
-                    <option value="BTC">BTC</option>
+                    <option value="JPY">JPY</option>
                 </select>
                 <div class="row align-center gap-12">
                     <div class="column align-center gap-12">
