Fix CSS for Smartphone

--- a/part16/index.html
+++ b/part16/index.html
@@ -26,7 +26,7 @@
             <h1>Consulta CEP</h1>
             
             <!-- Postal Code Fetch Form -->
-            <form class="row gap-1rem justify-center" action="none" method="none">
+            <form id="form" class="row gap-1rem justify-center" action="none" method="none">
                 <input id="cepInput" class="input" type="text" name="" placeholder="Digite o CEP" autofocus tabindex="1">
                 <button id="fetchCEPButton" class="input" disabled tabindex="2">OK</button>
             </form>
